kubernetes-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      serviceAccountName: default
      containers:
        - name: todo-app
          image: your-ecr-repo-name:latest
          ports:
            - containerPort: 3000
